--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/shivan2418/advent-of-code-2021#readme",
   "dependencies": {
     "lodash": "^4.17.21",
+    "priorityqueue": "^2.0.0",
     "ts-node": "^10.9.1"
   }
 }
